--- a/src/fabric_interface/templates/fabric_interface/base.html
+++ b/src/fabric_interface/templates/fabric_interface/base.html
@@ -24,6 +24,7 @@
     <body>
         {% include "fabric_interface/navigation.html" %}
         {% block base_content %}{% endblock %}
+        {% include "fabric_interface/footer.html" %}
 
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
         <!-- Include all compiled plugins (below), or include individual files as needed -->
