--- a/src/fabric_interface/projects/templates/projects/project_form.html
+++ b/src/fabric_interface/projects/templates/projects/project_form.html
@@ -48,7 +48,7 @@
             <div class="col-sm-8">
                 <h4>{% trans "Add project" %}</h4>
                 <hr />
-                <form role="form">
+                <form method="post" role="form">
                     {% csrf_token %}
                     <div class="form-group">
                         <label for="title">Title</label>
