--- a/src/static/css/bootstrap-theme.css
+++ b/src/static/css/bootstrap-theme.css
@@ -418,6 +418,7 @@
 .well
 {
     border-color: #dcdcdc;
+    border-radius: 0;
     background-image: -webkit-linear-gradient(top, #e8e8e8 0%, #f5f5f5 100%);
     background-image:         linear-gradient(to bottom, #e8e8e8 0%, #f5f5f5 100%);
     background-repeat: repeat-x;
