--- a/src/fabric_interface/templates/fabric_interface/home.html
+++ b/src/fabric_interface/templates/fabric_interface/home.html
@@ -1,4 +1,4 @@
-{% extends "fabric_interface/layouts/sidebar_double.html" %}
+{% extends "fabric_interface/layouts/sidebar_left.html" %}
 
 {% load i18n %}
 
@@ -19,17 +19,6 @@
             </li>
         </ul>
     </div>
-    <!-- panel/hosts -->
-    <div class="well well-sm">
-        <ul class="nav nav-list">
-            <li class="nav-header">{% trans "Hosts" %}</li>
-            <li><a href="#">Host X</a></li>
-            {% for host in host_list %}
-                <li><a href="{% url 'project_detail' slug=host.slug %}">{{ host.title }}</a></li>
-            {% endfor %}
-            <li class="action"><a href=""><i class="glyphicon glyphicon-plus"></i> {% trans "Add host" %}</a></li>
-        </ul>
-    </div>
     <!-- panel/users -->
     <div class="well well-sm">
         <ul class="nav nav-list">
@@ -44,16 +33,8 @@
 {% endblock %}
 
 {% block content %}
-    <h4>{% trans "Add project" %}</h4>
-    <hr />
-    <form method="post" role="form">
-        {% csrf_token %}
-        {% for field in form %}
-            <div class="form-group">
-                <label for="{{ field.auto_id }}">{{ field.label }}</label>
-                <input type="text" class="form-control" id="{{ field.auto_id }}" name="{{ field.name }}" placeholder="Enter {{ field.name }}">
-            </div>
-        {% endfor %}
-        <button type="submit" class="btn btn-default">Submit</button>
-    </form>
+    <div class="jumbotron">
+        <h1>Fabric Interface</h1>
+        <p>DTAP deployments made easy.</p>
+    </div>
 {% endblock %}
