--- a/src/fabric_interface/templates/fabric_interface/layouts/sidebar_double.html
+++ b/src/fabric_interface/templates/fabric_interface/layouts/sidebar_double.html
@@ -6,8 +6,7 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-3">
-                {% block sidebar_left %}
-                {% endblock %}
+                {% block sidebar_left %}{% endblock %}
             </div>
             <div class="col-sm-6">
                 {% block messages %}
@@ -21,8 +20,7 @@
                 {% block content %}{% endblock %}
             </div>
             <div class="col-sm-3">
-                {% block sidebar_right %}
-                {% endblock %}
+                {% block sidebar_right %}{% endblock %}
             </div>
         </div>
     </div>
