--- a/src/fabric_interface/templates/fabric_interface/layouts/sidebar_left.html
+++ b/src/fabric_interface/templates/fabric_interface/layouts/sidebar_left.html
@@ -6,8 +6,7 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-3">
-                {% block sidebar_left %}
-                {% endblock %}
+                {% block sidebar_left %}{% endblock %}
             </div>
             <div class="col-sm-9">
                 {% block messages %}
