--- a/src/fabric_interface/templates/fabric_interface/navigation.html
+++ b/src/fabric_interface/templates/fabric_interface/navigation.html
@@ -9,12 +9,11 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Fabric Interface</a>
+            <a class="navbar-brand" href="{% url 'home' %}">Fabric Interface</a>
         </div>
         <div class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-                <li class="active"><a href="{% url 'home' %}">{% trans "Home" %}</a></li>
-                <li><a href="#about">About</a></li>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="#license">License</a></li>
                 <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
                 <ul class="dropdown-menu">
@@ -26,13 +25,8 @@
                     <li><a href="#">Separated link</a></li>
                     <li><a href="#">One more separated link</a></li>
                 </ul>
-            </li>
-        </ul>
-        <ul class="nav navbar-nav navbar-right">
-            <li><a href="../navbar/">Default</a></li>
-            <li class="active"><a href="./">Static top</a></li>
-            <li><a href="../navbar-fixed-top/">Fixed top</a></li>
-        </ul>
+                </li>
+            </ul>
         </div><!--/.nav-collapse -->
     </div>
 </div>
