--- a/src/fabric_interface/stages/templates/stages/stage_detail.html
+++ b/src/fabric_interface/stages/templates/stages/stage_detail.html
@@ -55,7 +55,7 @@
         <li class="nav-header">{% trans "Stages" %}</li>
         <ul class="nav nav-list">
             {% for stage in object.project.stage_set.all %}
-                <li><a href="{% url 'project_stage_detail' slug=object.project.slug role=stage.role %}">{{ stage.role }}</a></li>
+                <li><a href="{% url 'project_stage_detail' slug=object.project.slug role_slug=stage.slug %}">{{ stage.role }}</a></li>
             {% empty %}
                 <li>No stages.</li>
             {% endfor %}
