--- a/src/fabric_interface/stages/templates/stages/stage_form.html
+++ b/src/fabric_interface/stages/templates/stages/stage_form.html
@@ -55,7 +55,7 @@
         {% endfor %}
         {% buttons %}
             <button type="submit" class="btn btn-default">
-                {% bootstrap_icon "plus" %} {% if object %}{% trans "Update" %}{% else %}{% trans "Create" %}{% endif %}
+                {% if object %}{% trans "Update/Delete" %}{% else %}{% bootstrap_icon "plus" %}  {% trans "Create" %}{% endif %}
             </button>
         {% endbuttons %}
     </form>
