--- a/src/fabric_interface/projects/templates/projects/project_form.html
+++ b/src/fabric_interface/projects/templates/projects/project_form.html
@@ -2,6 +2,8 @@
 
 {% load i18n debug %}
 
+{% block title %}{{ title }}{% endblock %}
+
 {% block sidebar_left %}
     <!-- panel/projects -->
     <div class="well well-sm">
