--- a/src/fabric_interface/stages/templates/stages/stage_form.html
+++ b/src/fabric_interface/stages/templates/stages/stage_form.html
@@ -2,13 +2,15 @@
 
 {% load i18n bootstrap3 %}
 
+{% block title %}{{ title }}{% endblock %}
+
 {% block sidebar_left %}
     <!-- panel/projects -->
     <div class="well well-sm">
         <ul class="nav nav-list">
             <li class="nav-header">{% trans "Projects" %}</li>
             {% for project in project_list %}
-                <li class="{% if project.slug == object.slug %}active{% endif %}">
+                <li class="{% if project.slug == object.slug or project.slug == object.project.slug %}active{% endif %}">
                     <a href="{% url 'project_detail' slug=project.slug %}">{{ project.title }}</a>
                 </li>
             {% endfor %}
@@ -55,7 +57,11 @@
         {% endfor %}
         {% buttons %}
             <button type="submit" class="btn btn-default">
-                {% if object %}{% trans "Update/Delete" %}{% else %}{% bootstrap_icon "plus" %}  {% trans "Create" %}{% endif %}
+                {% if action == 'create' %}
+                    {% bootstrap_icon "plus" %} {{ title }}
+                {% else %}
+                    {% bootstrap_icon "pencil" %} {{ title }}
+                {% endif %}
             </button>
         {% endbuttons %}
     </form>
