--- a/src/fabric_interface/templates/fabric_interface/layouts/sidebar_double.html
+++ b/src/fabric_interface/templates/fabric_interface/layouts/sidebar_double.html
@@ -2,6 +2,8 @@
 
 {% load i18n %}
 
+{% block title %}{% endblock %}
+
 {% block base_content %}
     <div class="container">
         <div class="row">
