--- a/src/fabric_interface/hosts/templates/hosts/host_confirm_delete.html
+++ b/src/fabric_interface/hosts/templates/hosts/host_confirm_delete.html
@@ -10,8 +10,14 @@
         <ul class="nav nav-list">
             <li class="nav-header">{% trans "All projects" %}</li>
             {% for project in project_list %}
-                <li class="{% if project.slug == object.slug or project.slug == object.project.slug %}active{% endif %}">
-                    <a href="{% url 'project_detail' slug=project.slug %}">{{ project }}</a>
+                <li class="{% if project.slug == object.slug %}active{% endif %}">
+                    <a href="{% url 'project_detail' slug=project.slug %}">
+                        {% if project in object.projects.all %}
+                            <i class="glyphicon glyphicon-check"></i>
+                        {% else %}
+                            <i class="glyphicon glyphicon-unchecked"></i>
+                        {% endif %} {{ project }}
+                    </a>
                 </li>
             {% endfor %}
             <li class="action">
@@ -26,19 +32,9 @@
         <ul class="nav nav-list">
             <li class="nav-header">{% trans "Hosts" %}</li>
             {% for host in host_list %}
-                <li>
-                    <a href="{% url 'host_detail' slug=host.slug %}">
-                        {% if host in object.hosts.all %}
-                            <i class="glyphicon glyphicon-check"></i>
-                        {% else %}
-                            <i class="glyphicon glyphicon-unchecked"></i>
-                        {% endif %} {{ host }}
-                    </a>
-                </li>
-            {% empty %}
-                <li>{% trans "No hosts available." %}</li>
+                <li class="{% if host.slug == object.slug %}active{% endif %}"><a href="{% url 'host_detail' slug=host.slug %}">{{ host }}</a></li>
             {% endfor %}
-            <li class="action"><a href="{% url 'host_create' %}"><i class="glyphicon glyphicon-plus"></i> {% trans "Add host" %}</a></li>
+            <li class="action"><a href=""><i class="glyphicon glyphicon-plus"></i> {% trans "Add host" %}</a></li>
         </ul>
     </div>
     <!-- panel/users -->
@@ -55,8 +51,9 @@
 {% endblock %}
 
 {% block content %}
-    <h4>{% if object %}{% trans "Edit stage" %}{% else %}{% trans "Add stage" %}{% endif %}</h4>
+    <h4>{% trans "Delete host" %} '{{ host }}'</h4>
     <hr />
+    <h3>Are you sure? There's no going back!</h3>
     <form method="post" role="form">
         {% csrf_token %}
         {% for field in form %}
@@ -65,12 +62,8 @@
             </div>
         {% endfor %}
         {% buttons %}
-            <button type="submit" class="btn btn-default">
-                {% if action == 'create' %}
-                    {% bootstrap_icon "plus" %} {{ title }}
-                {% else %}
-                    {% bootstrap_icon "pencil" %} {{ title }}
-                {% endif %}
+            <button type="submit" class="btn btn-danger">
+                {% bootstrap_icon "remove" %} {{ title }}
             </button>
         {% endbuttons %}
     </form>
