--- a/src/fabric_interface/projects/templates/projects/project_confirm_delete.html
+++ b/src/fabric_interface/projects/templates/projects/project_confirm_delete.html
@@ -8,10 +8,10 @@
     <!-- panel/projects -->
     <div class="well well-sm">
         <ul class="nav nav-list">
-            <li class="nav-header">{% trans "Projects" %}</li>
+            <li class="nav-header">{% trans "All projects" %}</li>
             {% for project in project_list %}
                 <li class="{% if project.slug == object.slug %}active{% endif %}">
-                    <a href="{% url 'project_detail' slug=project.slug %}">{{ project.title }}</a>
+                    <a href="{% url 'project_detail' slug=project.slug %}">{{ project }}</a>
                 </li>
             {% endfor %}
             <li class="action">
@@ -24,12 +24,13 @@
     <!-- panel/hosts -->
     <div class="well well-sm">
         <ul class="nav nav-list">
-            <li class="nav-header">{% trans "Hosts" %}</li>
-            <li><a href="#">Host X</a></li>
+            <li class="nav-header">{% trans "Available hosts" %}</li>
             {% for host in host_list %}
-                <li><a href="{% url 'project_detail' slug=host.slug %}">{{ host.title }}</a></li>
+                <li><a href="{% url 'host_detail' slug=host.slug %}">{{ host }}</a></li>
+            {% empty %}
+                <li>{% trans "No hosts available." %}</li>
             {% endfor %}
-            <li class="action"><a href=""><i class="glyphicon glyphicon-plus"></i> {% trans "Add host" %}</a></li>
+            <li class="action"><a href="{% url 'host_create' %}"><i class="glyphicon glyphicon-plus"></i> {% trans "Add host" %}</a></li>
         </ul>
     </div>
     <!-- panel/users -->
@@ -46,7 +47,7 @@
 {% endblock %}
 
 {% block content %}
-    <h4>{% trans "Delete project" %} '{{ project.title }}'</h4>
+    <h4>{% trans "Delete project" %} '{{ project }}'</h4>
     <hr />
     <h3>Are you sure? There's no going back!</h3>
     <form method="post" role="form">
