--- a/src/fabric_interface/projects/templates/projects/project_detail.html
+++ b/src/fabric_interface/projects/templates/projects/project_detail.html
@@ -8,10 +8,10 @@
     <!-- panel/projects -->
     <div class="well well-sm">
         <ul class="nav nav-list">
-            <li class="nav-header">{% trans "Projects" %}</li>
+            <li class="nav-header">{% trans "All projects" %}</li>
             {% for project in project_list %}
                 <li class="{% if project.slug == object.slug %}active{% endif %}">
-                    <a href="{% url 'project_detail' slug=project.slug %}">{{ project.title }}</a>
+                    <a href="{% url 'project_detail' slug=project.slug %}">{{ project }}</a>
                 </li>
             {% endfor %}
             <li class="action">
@@ -24,12 +24,21 @@
     <!-- panel/hosts -->
     <div class="well well-sm">
         <ul class="nav nav-list">
-            <li class="nav-header">{% trans "Hosts" %}</li>
-            <li><a href="#">Host X</a></li>
+            <li class="nav-header">{% trans "Available hosts" %}</li>
             {% for host in host_list %}
-                <li><a href="{% url 'project_detail' slug=host.slug %}">{{ host.title }}</a></li>
+                <li>
+                    <a href="{% url 'host_detail' slug=host.slug %}">
+                        {{ host }}
+                    </a>
+                </li>
+            {% empty %}
+                <li>{% trans "No hosts available." %}</li>
             {% endfor %}
-            <li class="action"><a href=""><i class="glyphicon glyphicon-plus"></i> {% trans "Add host" %}</a></li>
+            <li class="action">
+                <a href="{% url 'host_create' %}">
+                    <i class="glyphicon glyphicon-plus"></i> {% trans "Add host" %}
+                </a>
+            </li>
         </ul>
     </div>
     <!-- panel/users -->
@@ -46,7 +55,7 @@
 {% endblock %}
 
 {% block content %}
-    <h4>{% trans "Project" %}</h4>
+    <h4>{% trans "Project" %} '{{ project }}'</h4>
     <hr />
     <div class="row">
         <div class="col-md-12">{{ object }} SLUG={{ object.slug }} STAGES={{ object.stage_set.all }}</div>
@@ -59,7 +68,7 @@
         <ul class="nav nav-list">
             <li class="nav-header">{% trans "Stages" %}</li>
             {% for stage in object.stage_set.all %}
-                <li><a href="{% url 'project_stage_detail' slug=object.slug role_slug=stage.slug %}">{{ stage.role }}</a></li>
+                <li><a href="{% url 'project_stage_detail' slug=object.slug role_slug=stage.slug %}">{{ stage }}</a></li>
             {% empty %}
                 <li>No stages.</li>
             {% endfor %}
@@ -70,8 +79,8 @@
     <div class="well well-sm">
         <ul class="nav nav-list">
             <li class="nav-header">{% trans "Danger Zone" %}</li>
-            <li><a href="{% url 'project_update' slug=object.slug %}">EDIT</a></li>
-            <li><a href="{% url 'project_delete' slug=object.slug %}">DELETE</a></li>
+            <li><a href="{% url 'project_update' slug=object.slug %}">{% trans "Edit" %}</a></li>
+            <li><a href="{% url 'project_delete' slug=object.slug %}">{% trans "Delete" %}</a></li>
         </ul>
     </div>
 {% endblock %}
