--- a/src/fabric_interface/projects/templates/projects/project_form.html
+++ b/src/fabric_interface/projects/templates/projects/project_form.html
@@ -1,6 +1,6 @@
 {% extends "fabric_interface/layouts/sidebar_double.html" %}
 
-{% load i18n debug %}
+{% load i18n bootstrap3 debug %}
 
 {% block title %}{{ title }}{% endblock %}
 
@@ -8,10 +8,10 @@
     <!-- panel/projects -->
     <div class="well well-sm">
         <ul class="nav nav-list">
-            <li class="nav-header">{% trans "Projects" %}</li>
+            <li class="nav-header">{% trans "All projects" %}</li>
             {% for project in project_list %}
                 <li class="{% if project.slug == object.slug %}active{% endif %}">
-                    <a href="{% url 'project_detail' slug=project.slug %}">{{ project.title }}</a>
+                    <a href="{% url 'project_detail' slug=project.slug %}">{{ project }}</a>
                 </li>
             {% endfor %}
             <li class="action">
@@ -24,12 +24,13 @@
     <!-- panel/hosts -->
     <div class="well well-sm">
         <ul class="nav nav-list">
-            <li class="nav-header">{% trans "Hosts" %}</li>
-            <li><a href="#">Host X</a></li>
+            <li class="nav-header">{% trans "Available hosts" %}</li>
             {% for host in host_list %}
-                <li><a href="{% url 'project_detail' slug=host.slug %}">{{ host.title }}</a></li>
+                <li><a href="{% url 'host_detail' slug=host.slug %}">{{ host }}</a></li>
+            {% empty %}
+                <li>{% trans "No hosts available." %}</li>
             {% endfor %}
-            <li class="action"><a href=""><i class="glyphicon glyphicon-plus"></i> {% trans "Add host" %}</a></li>
+            <li class="action"><a href="{% url 'host_create' %}"><i class="glyphicon glyphicon-plus"></i> {% trans "Add host" %}</a></li>
         </ul>
     </div>
     <!-- panel/users -->
@@ -52,10 +53,17 @@
         {% csrf_token %}
         {% for field in form %}
             <div class="form-group">
-                <label for="{{ field.auto_id }}">{{ field.label }}</label>
-                <input type="text" class="form-control" id="{{ field.auto_id }}" name="{{ field.name }}" {% if field.value %}value="{{ field.value }}"{% else %}placeholder="Enter {{ field.name }}"{% endif %}>
+                {% bootstrap_field field %}
             </div>
         {% endfor %}
-        <button type="submit" class="btn btn-default">{% if object %}{% trans "Update" %}{% else %}{% trans "Create" %}{% endif %}</button>
+        {% buttons %}
+            <button type="submit" class="btn btn-default">
+                {% if action == 'create' %}
+                    {% bootstrap_icon "plus" %} {{ title }}
+                {% else %}
+                    {% bootstrap_icon "pencil" %} {{ title }}
+                {% endif %}
+            </button>
+        {% endbuttons %}
     </form>
 {% endblock %}
