--- a/src/fabric_interface/stages/templates/stages/stage_detail.html
+++ b/src/fabric_interface/stages/templates/stages/stage_detail.html
@@ -8,10 +8,10 @@
     <!-- panel/projects -->
     <div class="well well-sm">
         <ul class="nav nav-list">
-            <li class="nav-header">{% trans "Projects" %}</li>
+            <li class="nav-header">{% trans "All projects" %}</li>
             {% for project in project_list %}
                 <li class="{% if project.slug == object.slug or project.slug == object.project.slug %}active{% endif %}">
-                    <a href="{% url 'project_detail' slug=project.slug %}">{{ project.title }}</a>
+                    <a href="{% url 'project_detail' slug=project.slug %}">{{ project }}</a>
                 </li>
             {% endfor %}
             <li class="action">
@@ -25,11 +25,20 @@
     <div class="well well-sm">
         <ul class="nav nav-list">
             <li class="nav-header">{% trans "Hosts" %}</li>
-            <li><a href="#">Host X</a></li>
             {% for host in host_list %}
-                <li><a href="{% url 'project_detail' slug=host.slug %}">{{ host.title }}</a></li>
+                <li>
+                    <a href="{% url 'host_detail' slug=host.slug %}">
+                        {% if host in object.hosts.all %}
+                            <i class="glyphicon glyphicon-check"></i>
+                        {% else %}
+                            <i class="glyphicon glyphicon-unchecked"></i>
+                        {% endif %} {{ host }}
+                    </a>
+                </li>
+            {% empty %}
+                <li>{% trans "No hosts available." %}</li>
             {% endfor %}
-            <li class="action"><a href=""><i class="glyphicon glyphicon-plus"></i> {% trans "Add host" %}</a></li>
+            <li class="action"><a href="{% url 'host_create' %}"><i class="glyphicon glyphicon-plus"></i> {% trans "Add host" %}</a></li>
         </ul>
     </div>
     <!-- panel/users -->
@@ -46,9 +55,9 @@
 {% endblock %}
 
 {% block content %}
-    <h4>{% if object %}{% trans "Edit stage" %}{% endif %}</h4>
+    <h4>{% trans "Stage" %} '{{ stage }}'</h4>
     <hr />
-    {{ object }}
+    {{ object }} HOSTS={{ object.hosts.all }}
 {% endblock %}
 
 {% block sidebar_right %}
@@ -58,7 +67,7 @@
             <li class="nav-header">{% trans "Stages" %}</li>
             {% for stage in object.project.stage_set.all %}
                 <li class="{% if stage.slug == object.slug %}active{% endif %}">
-                    <a href="{% url 'project_stage_detail' slug=object.project.slug role_slug=stage.slug %}">{{ stage.role }}</a>
+                    <a href="{% url 'project_stage_detail' slug=object.project.slug role_slug=stage.slug %}">{{ stage }}</a>
                 </li>
             {% empty %}
                 <li>No stages.</li>
