--- a/src/fabric_interface/templates/fabric_interface/home.html
+++ b/src/fabric_interface/templates/fabric_interface/home.html
@@ -8,11 +8,13 @@
     <!-- panel/projects -->
     <div class="well well-sm">
         <ul class="nav nav-list">
-            <li class="nav-header">{% trans "Projects" %}</li>
+            <li class="nav-header">{% trans "All projects" %}</li>
             {% for project in project_list %}
                 <li class="{% if project.slug == object.slug %}active{% endif %}">
-                    <a href="{% url 'project_detail' slug=project.slug %}">{{ project.title }}</a>
+                    <a href="{% url 'project_detail' slug=project.slug %}">{{ project }}</a>
                 </li>
+            {% empty %}
+                <li>{% trans "No projects found." %}</li>
             {% endfor %}
             <li class="action">
                 <a href="{% url 'project_create' %}">
@@ -21,10 +23,26 @@
             </li>
         </ul>
     </div>
+    <!-- panel/hosts -->
+    <div class="well well-sm">
+        <ul class="nav nav-list">
+            <li class="nav-header">{% trans "All hosts" %}</li>
+            {% for host in host_list %}
+                <li><a href="{% url 'host_detail' slug=host.slug %}">{{ host }}</a></li>
+            {% empty %}
+                <li>{% trans "No hosts found." %}</li>
+            {% endfor %}
+            <li class="action">
+                <a href="{% url 'host_create' %}">
+                    <i class="glyphicon glyphicon-plus"></i> {% trans "Add host" %}
+                </a>
+            </li>
+        </ul>
+    </div>
     <!-- panel/users -->
     <div class="well well-sm">
         <ul class="nav nav-list">
-            <li class="nav-header">{% trans "Users" %}</li>
+            <li class="nav-header">{% trans "All users" %}</li>
             <li><a href="#">John Doe</a></li>
             {% for user in user_list %}
                 <li><a href="{% url 'project_detail' pk=user.pk %}">{{ user.name }}</a></li>
