--- a/src/fabric_interface/projects/templates/projects/project_form.html
+++ b/src/fabric_interface/projects/templates/projects/project_form.html
@@ -64,6 +64,9 @@
                     {% bootstrap_icon "pencil" %} {{ title }}
                 {% endif %}
             </button>
+            <a href="{% url 'project_delete' slug=object.slug %}" class="btn btn-danger">
+                {% bootstrap_icon "remove" %} {% trans "Delete" %}
+            </a>
         {% endbuttons %}
     </form>
 {% endblock %}
