--- a/src/fabric_interface/hosts/templates/hosts/host_form.html
+++ b/src/fabric_interface/hosts/templates/hosts/host_form.html
@@ -68,9 +68,11 @@
                     {% bootstrap_icon "pencil" %} {{ title }}
                 {% endif %}
             </button>
-            <a href="{% url 'host_delete' slug=object.slug %}" class="btn btn-danger">
-                {% bootstrap_icon "remove" %} {% trans "Delete" %}
-            </a>
+            {% if action != 'create' %}
+                <a href="{% url 'host_delete' slug=object.slug %}" class="btn btn-danger">
+                    {% bootstrap_icon "remove" %} {% trans "Delete" %}
+                </a>
+            {% endif %}
         {% endbuttons %}
     </form>
 {% endblock %}
