--- a/src/static/css/bootstrap-theme.css
+++ b/src/static/css/bootstrap-theme.css
@@ -522,4 +522,8 @@
 {
     border-radius: 0;
 }
+.container .jumbotron
+{
+    border-radius: 0;
+}
 /*# sourceMappingURL=bootstrap-theme.css.map */
