--- a/src/fabric_interface/templates/fabric_interface/layouts/sidebar_double.html
+++ b/src/fabric_interface/templates/fabric_interface/layouts/sidebar_double.html
@@ -2,6 +2,8 @@
 
 {% load i18n %}
 
+{% block extracss %}{% endblock %}
+
 {% block title %}{% endblock %}
 
 {% block base_content %}
@@ -27,3 +29,5 @@
         </div>
     </div>
 {% endblock %}
+
+{% block extrajs %}{% endblock %}
