--- a/src/fabric_interface/templates/fabric_interface/home.html
+++ b/src/fabric_interface/templates/fabric_interface/home.html
@@ -39,17 +39,18 @@
             </li>
         </ul>
     </div>
+    {% if user.is_staff %}
     <!-- panel/users -->
     <div class="well well-sm">
         <ul class="nav nav-list">
             <li class="nav-header">{% trans "All users" %}</li>
-            <li><a href="#">John Doe</a></li>
             {% for user in user_list %}
-                <li><a href="{% url 'project_detail' pk=user.pk %}">{{ user.name }}</a></li>
+                <li><a href="{% url 'user_detail' pk=user.pk %}">{{ user.email }}</a></li>
             {% endfor %}
-            <li class="action"><a href=""><i class="glyphicon glyphicon-plus"></i> {% trans "Add user" %}</a></li>
+            <li class="action"><a href="{% url 'user_create' %}"><i class="glyphicon glyphicon-plus"></i> {% trans "Add user" %}</a></li>
         </ul>
     </div>
+    {% endif %}
 {% endblock %}
 
 {% block content %}
