updated user forms and views

--- a/src/fabric_interface/projects/templates/projects/project_form.html
+++ b/src/fabric_interface/projects/templates/projects/project_form.html
@@ -66,7 +66,7 @@
                 {% endif %}
             </button>
             {% if action != 'create' %}
-                <a href="{% url 'project_delete' slug=object.slug %}" class="btn btn-danger">
+                <a href="{% url 'project_delete' slug=object.slug %}" class="btn btn-danger pull-right">
                     {% bootstrap_icon "remove" %} {% trans "Delete" %}
                 </a>
             {% endif %}
