--- a/src/fabric_interface/stages/templates/stages/stage_form.html
+++ b/src/fabric_interface/stages/templates/stages/stage_form.html
@@ -74,7 +74,7 @@
                 {% endif %}
             </button>
             {% if action != 'create' %}
-                <a href="{% url 'project_stage_delete' slug=object.project.slug role_slug=object.slug %}" class="btn btn-danger">
+                <a href="{% url 'project_stage_delete' slug=object.project.slug role_slug=object.slug %}" class="btn btn-danger pull-right">
                     {% bootstrap_icon "remove" %} {% trans "Delete" %}
                 </a>
             {% endif %}
